--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ nltk==3.4.5
 numpy==1.18.0
 protobuf==3.11.2
 scikit-learn==0.22
-scipy==1.3.1
+scipy
 six==1.12.0
 tb-nightly==1.14.0a20190301
 tensorflow==2.0.0a0
