--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,54 @@
-astor==0.8.1
-certifi==2019.11.28
-Click==7.0
-Flask==1.1.1
-Flask-WTF==0.14.2
-gast==0.3.2
-google-pasta==0.1.8
-grpcio==1.26.0
-gunicorn==20.0.4
-h5py==2.10.0
-itsdangerous==1.1.0
-Jinja2==2.10.3
-joblib==0.14.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-Markdown==3.1.1
-MarkupSafe==1.1.1
-nltk==3.4.5
-numpy==1.18.0
-protobuf==3.11.2
-scikit-learn==0.22
-scipy
-six==1.12.0
-tb-nightly==1.14.0a20190301
-tensorflow==2.0.0a0
-termcolor==1.1.0
-tf-estimator-nightly==1.14.0.dev2019030115
-Werkzeug==0.16.0
-wincertstore==0.2
-WTForms==2.2.1
+absl-py==1.4.0
+astunparse==1.6.3
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+Flask==2.3.2
+Flask-WTF==1.1.1
+flatbuffers==23.5.26
+gast==0.4.0
+google-auth==2.19.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.2
+gunicorn==20.1.0
+h5py==3.8.0
+idna==3.4
+itsdangerous==2.1.2
+jax==0.4.10
+Jinja2==3.1.2
+joblib==1.2.0
+keras==2.12.0
+libclang==16.0.0
+Markdown==3.4.3
+MarkupSafe==2.1.2
+ml-dtypes==0.1.0
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==23.1
+protobuf==4.23.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow-cpu==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+threadpoolctl==3.1.0
+typing_extensions==4.6.2
+urllib3==1.26.16
+Werkzeug==2.3.4
+wrapt==1.14.1
+WTForms==3.0.1
